testing filtered bfs speedups

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,11 +36,11 @@ serde_json = "1.0.137"
 
 [profile.release]
 opt-level = 3            # like --release
-lto = "fat"              # Full LTO
+#lto = "fat"              # Full LTO
 overflow-checks = false  # Disable integer overflow checks.
 debug = true             # Include debug info.
 debug-assertions = false # Enables debug assertions.
-codegen-units = 1        # slower compile times, but maybe better perf
+#codegen-units = 1        # slower compile times, but maybe better perf
 
 [profile.bench]
 opt-level = 3            # like --release
