--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,14 +33,15 @@ sync-cell-slice = "0.9.9"
 arbitrary = { version = "1.3.2", features = ["derive"] }
 serde = { version = "1.0.217", features = ["serde_derive"] }
 serde_json = "1.0.137"
+zstd = "0.13"
 
 [profile.release]
 opt-level = 3            # like --release
-lto = "fat"              # Full LTO
+#lto = "fat"              # Full LTO
 overflow-checks = false  # Disable integer overflow checks.
 debug = true             # Include debug info.
 debug-assertions = false # Enables debug assertions.
-codegen-units = 1        # slower compile times, but maybe better perf
+#codegen-units = 1        # slower compile times, but maybe better perf
 
 [profile.bench]
 opt-level = 3            # like --release
