--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -24,6 +24,7 @@ log.workspace = true
 sux.workspace = true
 common_traits.workspace = true
 lender.workspace = true
+card-est-array.workspace = true
 
 rand.workspace = true
 tempfile.workspace = true
