--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ sux = "0.7.2"
 common_traits = "0.11.2"
 lender = "0.3.1"
 log = "0.4.22"
-
+num_cpus = "1.16.0"
 anyhow = { version = "1.0.79", features = ["backtrace"] }
 rand = { version = "0.9.0", features = ["small_rng"] }
 tempfile = "3.10.1"
