--- a/algo/Cargo.toml
+++ b/algo/Cargo.toml
@@ -22,9 +22,11 @@ sux.workspace = true
 epserde.workspace = true
 lender.workspace = true
 
+anyhow.workspace = true
+predicates.workspace = true
+num_cpus.workspace = true
 rand.workspace = true
 log.workspace = true
-anyhow.workspace = true
 rayon.workspace = true
 sync-cell-slice.workspace = true
 
