--- a/webgraph/Cargo.toml
+++ b/webgraph/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "webgraph"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 description = "A Rust port of the WebGraph framework (http://webgraph.di.unimi.it/)."
 repository = "https://github.com/vigna/webgraph-rs/"
@@ -40,12 +40,12 @@ tempfile.workspace = true
 itertools.workspace = true
 rayon.workspace = true
 mmap-rs.workspace = true
+num_cpus.workspace = true
 predicates.workspace = true
 java-properties.workspace = true
 sync-cell-slice.workspace = true
 arbitrary = { workspace = true, optional = true }
 
-num_cpus = "1.16.0"
 libc = "0.2.155"
 impl-tools = "0.10.0"
 bitflags = "2.6.0"
@@ -56,7 +56,7 @@ serde = { workspace = true, optional = true }
 crossbeam-channel = "0.5"
 
 # Fuzzing deps
-zip = { version = "2.1.5", optional = true }
+zip = { version = "4.0.0", optional = true }
 
 [dev-dependencies]
 serde.workspace = true
