--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,6 +6,7 @@ authors = [
 	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
 	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
 ]
+repository = "https://github.com/vigna/webgraph-rs/"
 description = "Command line interface of for the Rust port of the WebGraph framework (http://webgraph.di.unimi.it/)."
 license = "Apache-2.0 OR LGPL-2.1-or-later"
 readme = "README.md"
