--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,7 +11,7 @@ description = "Command line interface of for the Rust port of the WebGraph frame
 license = "Apache-2.0 OR LGPL-2.1-or-later"
 readme = "README.md"
 keywords = ["graph", "compression", "codes", "webgraph"]
-categories = ["compression", "data-structures", "algorithms", "cli"]
+categories = ["compression", "data-structures", "algorithms", "command-line-interface"]
 default-run = "webgraph"
 
 [dependencies]
