Update CSR to value-traits and fix test

--- a/webgraph/Cargo.toml
+++ b/webgraph/Cargo.toml
@@ -35,6 +35,7 @@ sux.workspace = true
 common_traits.workspace = true
 value-traits.workspace = true
 lender.workspace = true
+value-traits.workspace = true
 
 rand.workspace = true
 tempfile.workspace = true
