--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ dsi-progress-logger = "0.8.1"
 sux = "0.7.2"
 common_traits = "0.11.2"
 lender = "0.3.1"
+value-traits = "0.1.3"
 log = "0.4.22"
 num_cpus = "1.16.0"
 anyhow = { version = "1.0.79", features = ["backtrace"] }
