--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ arbitrary = { version = "1.3.2", features = ["derive"] }
 serde = { version = "1.0.217", features = ["serde_derive"] }
 serde_json = "1.0.137"
 zstd = "0.13"
+value-traits = "0.1.3"
 
 [profile.release]
 opt-level = 3            # like --release
