--- a/webgraph/Cargo.toml
+++ b/webgraph/Cargo.toml
@@ -33,6 +33,7 @@ dsi-progress-logger.workspace = true
 log.workspace = true
 sux.workspace = true
 common_traits.workspace = true
+value-traits.workspace = true
 lender.workspace = true
 
 rand.workspace = true
@@ -47,7 +48,8 @@ sync-cell-slice.workspace = true
 arbitrary = { workspace = true, optional = true }
 
 libc = "0.2.155"
-impl-tools = "0.10.0"
+impl-tools = "0.11.2"
+impl-tools-lib = "0.11.2"
 bitflags = "2.6.0"
 dary_heap = "0.3.6"
 rdst = { version = "0.20.14", features = ["multi-threaded"] }
