--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ resolver = "2"
 members = ["algo", "cli", "webgraph"]
 
 [workspace.dependencies]
-webgraph = {path="./webgraph", version="0.3.0"}
-webgraph-algo = {path="./algo", version="0.2.0"}
-webgraph-cli = {path="./cli", version="0.1.0"}
+webgraph = { path = "./webgraph", version = "0.3.0" }
+webgraph-algo = { path = "./algo", version = "0.2.0" }
+webgraph-cli = { path = "./cli", version = "0.1.0" }
 
 card-est-array = "0.1.0"
 epserde = "0.8.0"
@@ -35,13 +35,14 @@ serde = { version = "1.0.217", features = ["serde_derive"] }
 serde_json = "1.0.137"
 zstd = "0.13"
 value-traits = "0.1.3"
+thiserror = "2.0.12"
 
 [profile.release]
-opt-level = 3            # like --release
+opt-level = 3             # like --release
 #lto = "fat"              # Full LTO
-overflow-checks = false  # Disable integer overflow checks.
-debug = true             # Include debug info.
-debug-assertions = false # Enables debug assertions.
+overflow-checks = false   # Disable integer overflow checks.
+debug = true              # Include debug info.
+debug-assertions = false  # Enables debug assertions.
 #codegen-units = 1        # slower compile times, but maybe better perf
 
 [profile.bench]
