--- a/webgraph/Cargo.toml
+++ b/webgraph/Cargo.toml
@@ -45,6 +45,7 @@ predicates.workspace = true
 java-properties.workspace = true
 sync-cell-slice.workspace = true
 arbitrary = { workspace = true, optional = true }
+thiserror.workspace = true
 
 libc = "0.2.155"
 impl-tools = "0.11.2"
