--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,15 +34,16 @@ arbitrary = { version = "1.3.2", features = ["derive"] }
 serde = { version = "1.0.217", features = ["serde_derive"] }
 serde_json = "1.0.137"
 zstd = "0.13"
-value-traits = "0.1.3"
+#value-traits = "0.1.3"
+value-traits = { git = "https://github.com/vigna/value-traits-rs" }
 thiserror = "2.0.12"
 
 [profile.release]
-opt-level = 3             # like --release
+opt-level = 3 # like --release
 #lto = "fat"              # Full LTO
-overflow-checks = false   # Disable integer overflow checks.
-debug = true              # Include debug info.
-debug-assertions = false  # Enables debug assertions.
+overflow-checks = false  # Disable integer overflow checks.
+debug = true             # Include debug info.
+debug-assertions = false # Enables debug assertions.
 #codegen-units = 1        # slower compile times, but maybe better perf
 
 [profile.bench]
