--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ card-est-array = "0.1.0"
 epserde = "0.8.0"
 dsi-bitstream = "0.5.0"
 dsi-progress-logger = "0.8.1"
-sux = { git = "https://github.com/vigna/sux-rs", branch = "valuetraits" }
+sux = "0.8.0"
 common_traits = "0.11.2"
 lender = "0.3.1"
 log = "0.4.22"
@@ -34,8 +34,7 @@ arbitrary = { version = "1.3.2", features = ["derive"] }
 serde = { version = "1.0.217", features = ["serde_derive"] }
 serde_json = "1.0.137"
 zstd = "0.13"
-#value-traits = "0.1.3"
-value-traits = { git = "https://github.com/vigna/value-traits-rs" }
+value-traits = "0.1.4"
 thiserror = "2.0.12"
 
 [profile.release]
