Moved visits to webgraph from webgraph_algo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ serde_json = "1.0.137"
 zstd = "0.13"
 value-traits = "0.1.4"
 thiserror = "2.0.12"
+no-break = "0.1.2"
+nonmax = "0.5.5"
 
 [profile.release]
 opt-level = 3 # like --release
