--- a/webgraph/Cargo.toml
+++ b/webgraph/Cargo.toml
@@ -46,6 +46,8 @@ java-properties.workspace = true
 sync-cell-slice.workspace = true
 arbitrary = { workspace = true, optional = true }
 thiserror.workspace = true
+no-break.workspace = true
+nonmax.workspace = true
 
 libc = "0.2.155"
 impl-tools = "0.11.2"
@@ -56,6 +58,7 @@ rdst = { version = "0.20.14", features = ["multi-threaded"] }
 sealed = "0.6.0"
 serde = { workspace = true, optional = true }
 crossbeam-channel = "0.5"
+parallel_frontier = "0.1.1"
 
 # Fuzzing deps
 zip = { version = "4.0.0", optional = true }
