--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,9 @@ name: Rust CI Pipeline
 
 on:
   push:
-    branches: ["main"]
+    branches:
   pull_request:
-    branches: ["main"]
+    branches:
 
 env:
   CARGO_TERM_COLOR: always
