--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,11 @@ webgraph-cli = { path = "./cli", version = "0.1.0" }
 
 card-est-array = "0.1.0"
 #epserde = "0.8.0"
-epserde = { git = "https://github.com/vigna/epserde.git" }
+epserde = { git = "https://github.com/vigna/epserde-rs" }
 dsi-bitstream = "0.5.0"
 dsi-progress-logger = "0.8.1"
 #sux = "0.8.0"
-sux = { git = "https://github.com/vigna/sux-rs.git" }
+sux = { git = "https://github.com/vigna/sux-rs" }
 common_traits = "0.12.0"
 lender = "0.3.1"
 log = "0.4.22"
