--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ epserde = { git = "https://github.com/vigna/epserde-rs" }
 dsi-bitstream = "0.5.0"
 dsi-progress-logger = "0.8.1"
 #sux = "0.8.0"
-sux = { git = "https://github.com/vigna/sux-rs" }
+sux = { git = "https://github.com/vigna/sux-rs", features = ["epserde", "rayon", "mmap"] }
 common_traits = "0.12.0"
 lender = "0.3.1"
 log = "0.4.22"
@@ -56,3 +56,6 @@ overflow-checks = false  # Disable integer overflow checks.
 debug = true             # Include debug info.
 debug-assertions = false # Enables debug assertions.
 codegen-units = 1        # slower compile times, but maybe better perf
+
+[patch.crates-io]
+epserde = { git = "https://github.com/vigna/epserde-rs" }
