--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,12 @@ webgraph-cli = { path = "./cli", version = "0.1.0" }
 
 card-est-array = "0.1.0"
 #epserde = "0.8.0"
-epserde = { git = "https://github.com/vigna/epserde-rs" }
+#epserde = { git = "https://github.com/vigna/epserde-rs" }
+epserde = { path = "../epserde-rs/epserde" }
 dsi-bitstream = "0.5.0"
 dsi-progress-logger = "0.8.1"
 #sux = "0.8.0"
-sux = { git = "https://github.com/vigna/sux-rs", features = ["epserde", "rayon", "mmap"] }
+sux = { path = "../sux-rs", features = ["epserde", "rayon", "mmap"] }
 common_traits = "0.12.0"
 lender = "0.3.1"
 log = "0.4.22"
@@ -58,5 +59,5 @@ debug-assertions = false # Enables debug assertions.
 codegen-units = 1        # slower compile times, but maybe better perf
 
 [patch.crates-io]
-epserde = { git = "https://github.com/vigna/epserde-rs" }
-sux = { git = "https://github.com/vigna/sux-rs", features = ["epserde", "rayon", "mmap"] }
+epserde = { path = "../epserde-rs/epserde" }
+sux = { path = "../sux-rs" }
