--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ value-traits = "0.1.4"
 thiserror = "2.0.12"
 no-break = "0.1.2"
 nonmax = "0.5.5"
+crossbeam-utils = "0.8.21"
 
 [profile.release]
 opt-level = 3 # like --release
