--- a/webgraph/Cargo.toml
+++ b/webgraph/Cargo.toml
@@ -12,6 +12,7 @@ authors = [
 	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
 	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
 ]
+rust-version = "1.85"
 
 [features]
 default = []
