--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -13,6 +13,7 @@ readme = "README.md"
 keywords = ["graph", "compression", "codes", "webgraph"]
 categories = ["compression", "data-structures", "algorithms", "command-line-interface"]
 default-run = "webgraph"
+rust-version = "1.85"
 
 [dependencies]
 webgraph.workspace = true
