--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -37,10 +37,10 @@ predicates.workspace = true
 java-properties.workspace = true
 clap.workspace = true
 env_logger.workspace = true
+sysinfo.workspace = true
 zstd.workspace = true
 
 jiff = "0.2.5"
-sysinfo = ">=0.35.0,<0.38"
 clap_complete = { version = "4.4.11" }
 
 [build-dependencies]
