--- a/webgraph/Cargo.toml
+++ b/webgraph/Cargo.toml
@@ -49,6 +49,7 @@ arbitrary = { workspace = true, optional = true }
 thiserror.workspace = true
 no-break.workspace = true
 nonmax.workspace = true
+sysinfo.workspace = true
 
 libc = "0.2.155"
 impl-tools = "0.11.2"
@@ -60,6 +61,7 @@ sealed = "0.6.0"
 serde = { workspace = true, optional = true }
 crossbeam-channel = "0.5"
 parallel_frontier = "0.1.1"
+thread_local = "1.1.8"
 
 # Fuzzing deps
 zip = { version = "5.0.0", optional = true }
