--- a/webgraph/fuzz/Cargo.toml
+++ b/webgraph/fuzz/Cargo.toml
@@ -22,3 +22,10 @@ path = "fuzz_targets/bvcomp_and_read.rs"
 test = false
 doc = false
 bench = false
+
+[[bin]]
+name = "roundtrip"
+path = "fuzz_targets/roundtrip.rs"
+test = false
+doc = false
+bench = false
