--- a/webgraph/Cargo.toml
+++ b/webgraph/Cargo.toml
@@ -57,9 +57,9 @@ dary_heap = "0.3.6"
 rdst = { version = "0.20.14", features = ["multi-threaded"] }
 sealed = "0.6.0"
 serde = { workspace = true, optional = true }
+crossbeam-queue = "0.3.12"
 crossbeam-channel = "0.5"
 parallel_frontier = "0.1.1"
-thread_local = "1.1.8"
 
 # Fuzzing deps
 zip = { version = "6.0.0", optional = true }
