--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [workspace]
 resolver = "2"
-members = ["algo", "cli", "webgraph", "webgraph/fuzz"]
+members = ["algo", "cli", "webgraph"]
+# Exclude the fuzzing workspace from the main workspace, since it is not meant 
+# to be built by default, nor run with `cargo t --all-targets`.
+exclude = ["webgraph/fuzz"]
 
 [workspace.dependencies]
 webgraph = { path = "./webgraph", version = "0.5.0" }
