--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ env_logger = { version = "0.11.5", default-features = false, features = [
     "auto-color",
     "regex",
 ] }
-clap = { version = "4.5.11", features = ["derive", "string"] }
+clap = { version = "4.5.11", features = ["derive", "string", "wrap_help"] }
 sync-cell-slice = "0.9.9"
 arbitrary = { version = "1.3.2", features = ["derive"] }
 serde = { version = "1.0.217", features = ["serde_derive"] }
