--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,10 @@ webgraph = { path = "./webgraph", version = "0.6.0" }
 webgraph-algo = { path = "./algo", version = "0.6.0" }
 webgraph-cli = { path = "./cli" }
 
-card-est-array = "0.2.0"
+card-est-array = "0.2.1"
 epserde = "0.12.0"
 dsi-bitstream = "0.7.0"
-dsi-progress-logger = "0.8.2"
+dsi-progress-logger = "=0.8.2" # For Rust 1.85
 sux = { version = "0.12.0", features = ["epserde", "rayon", "mmap"] }
 common_traits = "0.12.0"
 lender = "0.5.2"
@@ -32,7 +32,7 @@ env_logger = { version = "0.11.5", default-features = false, features = [
     "regex",
 ] }
 clap = { version = "4.5.11", features = ["derive", "string", "wrap_help"] }
-sync-cell-slice = "0.9.9"
+sync-cell-slice = "0.9.12"
 arbitrary = { version = "1.3.2", features = ["derive"] }
 serde = { version = "1.0.217", features = ["serde_derive"] }
 serde_json = "1.0.137"
