10000 new lines of tests; 20% coverage increase

--- a/algo/Cargo.toml
+++ b/algo/Cargo.toml
@@ -34,9 +34,11 @@ sync-cell-slice.workspace = true
 no-break.workspace = true
 nonmax.workspace = true
 crossbeam-utils.workspace = true
-
 thiserror.workspace = true
 kahan = "0.1.4"
+
+[dev-dependencies]
+tempfile.workspace = true
 
 [features]
 slow_tests = []
