Fixed failing type inference; propagated docs about Rayon

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,8 +13,16 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        rust: [stable, 1.85]
     steps:
       - uses: actions/checkout@v6
+      - name: Install Rust ${{ matrix.rust }}
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ matrix.rust }}
+          components: rustfmt, clippy
       - name: Check formatting
         run: cargo fmt -- --check
       - name: Run clippy
